[project]
name = "deepfilternet-video-denoiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thiago", email = "33910786+thiagoeh@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
deepfilternet-video-denoiser = "deepfilternet_video_denoiser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
